# hc-ecowitt

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
config/: .published-device-ids.json  config.toml  config.toml.example
src/: battery.rs  config.rs  form_parser.rs  gateway_device.rs  id_map.rs  main.rs  parser.rs  poller.rs  registry.rs  server.rs  udp_discovery.rs
