[workspace]

[package]
name        = "hc-ecowitt"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Ecowitt weather station plugin for homeCore"
repository  = "https://github.com/homeCore-io/hc-ecowitt"

[[bin]]
name = "hc-ecowitt"
path = "src/main.rs"

[dependencies]
plugin-sdk-rs      = { git = "https://github.com/homeCore-io/hc-plugin-sdk-rs", branch = "main" }
hc-types           = { git = "https://github.com/homeCore-io/homeCore", branch = "main" }
hc-logging         = { git = "https://github.com/homeCore-io/homeCore", branch = "main" }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
flate2           = "1"
chrono           = "0.4"
uuid         = { version = "1", features = ["v4"] }
axum         = "0.7"
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Size-optimized release profile (matches homeCore-io/homeCore).
[profile.release]
strip         = "symbols"
lto           = "thin"
codegen-units = 1
